<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertex_items_plan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_but"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/BurlyWood"

        android:text="EDIT"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/done_but"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/BurlyWood"

        android:text="DONE"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    android:layout_width="409dp"
    android:layout_height="729dp" />
</androidx.constraintlayout.widget.ConstraintLayout>