...
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBarTextInputEditText"
            style="@style/Widget.App.TextInputEditText.SearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_edit_text_hint"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertex_items_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
